[package]
name = "kawa"
version = "0.2.0"
authors = ["Luminarys <postmaster@gensok.io>", "ParadoxSpiral <ParadoxSpiral@riseup.net>", "WeebDataHoarder <57538841+WeebDataHoarder@users.noreply.github.com>"]

[features]
default = []
nightly = []

[dependencies]
kaeru = { path = "kaeru" }
toml = "0.5.8"
log = "0.4"
env_logger = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rouille = "1.0.3"
httparse = "1.3"
url = "1.7"

[dependencies.amy]
version = "0.10.0"
default-features = false
features = ["no_timerfd"]
