[package]
name = "kawa"
version = "0.2.0"
authors = ["Luminarys <postmaster@gensok.io>", "ParadoxSpiral <ParadoxSpiral@riseup.net>", "WeebDataHoarder <57538841+WeebDataHoarder@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "kawa"
path = "src/main.rs"

[features]
default = []
nightly = []

[dependencies]
kaeru = { path = "kaeru" }
toml = "0.5.8"
log = "0.4"
env_logger = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rouille = "3.0"
httparse = "1.3"
url = "1.7"
sha-1 = "0.9"
base64 = "0.13"
byteorder = "1.4"

[dependencies.amy]
version = "0.10.0"
default-features = false
features = ["no_timerfd"]

[profile.release]
lto = true
codegen-units = 1