[package]
name = "kaeru"
version = "0.1.1"
authors = ["Luminarys <postmaster@gensok.io>"]

[lib]
name = "kaeru"
path = "src/lib.rs"

[dependencies.libc]
version = "0.2"

[dependencies.error-chain]
version = "0.12"

[dependencies.ffmpeg-sys]
version = "4.1.3"
git = "https://github.com/Luminarys/rust-ffmpeg-sys.git"
